<resources>
    <string name="app_name">fromis_9</string>

    <!--menu_bottom_navigation_view.xml-->
    <string name="str_bottom_nav_home">홈</string>
    <string name="str_bottom_nav_video">영상</string>
    <string name="str_bottom_nav_schedule">일정</string>

    <!--menu__webview.xml-->
    <string name="str_webview_copy_url">Url 복사</string>
    <string name="str_webview_open_browser">브라우저에서 열기</string>

    <!--activity_album_list.xml-->
    <string name="str_album_list_title">앨범</string>
    <string name="str_album_list_search">노래 검색</string>
    <string name="str_album_list_type">전체</string>

    <!--activity_album_song.xml-->
    <string name="str_album_song_fanchant">응원법 영상</string>
    <string name="str_album_song_play">음원 영상</string>

    <!--activity_weverse_shop.xml-->
    <string name="str_weverse_shop_title">weverse shop</string>

    <!--activity_settings.xml-->
    <string name="str_settings_noti">알림</string>
    <string name="str_settings_noti_member_time">멤버시</string>
    <string name="str_settings_info">정보</string>
    <string name="str_settings_version">버전</string>
    <string name="str_settings_version_update">업데이트</string>
    <string name="str_settings_cache">캐시</string>
    <string name="str_settings_cache_clear">캐시 삭제</string>
    <string name="str_settings_others">기타</string>
    <string name="str_settings_license">라이선스</string>
    <string name="str_settings_changelog">체인지로그</string>

    <!--activity_video_details.xml-->
    <string name="str_video_details_views">조회수</string>
    <string name="str_video_details_published">업로드</string>

    <!--activity_member.xml-->
    <string name="str_member_birth">생년월일</string>
    <string name="str_member_position">포지션</string>
    <string name="str_member_sns">SNS</string>

    <!--activity_news.xml-->
    <string name="str_news_title">최근 소식</string>

    <!--activity_changelog_list.xml-->
    <string name="str_changelog_title">체인지로그</string>

    <!--activity_schedule_search.xml-->
    <string name="str_schedule_search">일정 검색</string>
    
    <!--fragment_video.xml-->
    <string name="str_video_all">전체</string>
    <string name="str_video_mv">뮤직비디오</string>
    <string name="str_video_channel9">채널나인</string>
    <string name="str_video_fm124">FM_1.24</string>
    <string name="str_video_vlog">v_log</string>
    <string name="str_video_fromisoda">프롬이소다</string>
    <string name="str_video_no_video">영상이 없습니다.</string>

    <!--fragment_schedule.xml-->
    <string name="str_schedule_no_schedule">일정이 없습니다.</string>

    <!--row_home_album_more.xml-->
    <string name="str_home_album_more_more">더보기</string>

    <!--row_home_news_more.xml-->
    <string name="str_home_news_more_more">더보기</string>

    <!--row_weverse_shop_album_list.xml-->
    <string name="str_weverse_shop_album_list_sold_out">품절</string>

    <!--row_news_footer.xml-->
    <string name="str_news_footer_footer">최근 3일 전까지의 소식을 볼 수 있습니다.</string>

    <!--row_video_list.xml-->
    <string name="str_video_new">NEW</string>

    <!--dialog_yearmonth_picker.xml-->
    <string name="str_yearmonth_cancel">취소</string>
    <string name="str_yearmonth_confirm">확인</string>

    <!--bottomsheet_schedule_category.xml-->
    <string name="str_schedule_category_all">전체 선택</string>

    <!--menu_toolbar_search.xml-->
    <string name="str_menu__search">검색</string>

    <!--MainActivity.kt-->
    <string name="str_main_press_back">뒤로 가기 버튼을 한 번 더 누르면 종료됩니다.</string>

    <!--VideoFragment.kt-->
    <string name="str_video_title">모든 영상</string>
    <string name="str_video_search">프로미스나인 영상 검색</string>
</resources>