<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollColor="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/nanum_square_round_extra_bold"
                android:maxLines="1"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/btnToggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:toggle_requiredAmount="1"
                app:toggle_selectAnimation="fade">

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnAll"
                    style="@style/StyleThemedToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_flexShrink="0"
                    app:toggle_text="@string/str_video_all" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnMv"
                    style="@style/StyleThemedToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_flexShrink="0"
                    app:toggle_text="@string/str_video_mv" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnChannel9"
                    style="@style/StyleThemedToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:layout_flexShrink="0"
                    app:toggle_text="@string/str_video_channel9" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnFm124"
                    style="@style/StyleThemedToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:layout_flexShrink="0"
                    app:toggle_text="@string/str_video_fm124" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnVlog"
                    style="@style/StyleThemedToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:layout_flexShrink="0"
                    app:toggle_text="@string/str_video_vlog" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btnFromisoda"
                    style="@style/StyleThemedToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:layout_flexShrink="0"
                    app:toggle_text="@string/str_video_fromisoda" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_video_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>