<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_album_list_scene">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nanum_square_round_extra_bold"
            android:text="@string/str_album_list_title"
            android:textColor="@color/dark_gray"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnShop"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:tint="@color/dark_gray"
            app:srcCompat="@drawable/icon_shop" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSearch"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_lightergray_rounded_28dp_ripple"
        android:drawablePadding="16dp"
        android:drawableTint="@color/gray"
        android:fontFamily="@font/nanum_square_neo_bold"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:text="@string/str_album_list_search"
        android:textColor="@color/gray"
        android:textSize="18dp"
        app:drawableStartCompat="@drawable/icon_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnType"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_lightgray_rounded_20dp_ripple"
        android:drawableEnd="@drawable/icon_arrow_down"
        android:drawablePadding="8dp"
        android:drawableTint="@color/dark_gray"
        android:fontFamily="@font/nanum_square_neo_bold"
        android:minWidth="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:stateListAnimator="@null"
        android:text="@string/str_album_list_type"
        android:textColor="@color/dark_gray"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnType" />

</androidx.constraintlayout.motion.widget.MotionLayout>